--- a/src/renderer/control/index.html
+++ b/src/renderer/control/index.html
@@ -70,6 +70,12 @@
             </div>
             <div class="control-group">
               <label class="checkbox-label">
+                <input type="checkbox" id="hide-speech-visualizations" />
+                <span>Hide speech visualizations</span>
+              </label>
+            </div>
+            <div class="control-group">
+              <label class="checkbox-label">
                 <input type="checkbox" id="auto-rotate-check" />
                 <span>Auto-rotate</span>
               </label>
