feat(control): random pool for smarter randomizing, fix preload bug on ui change

--- a/src/renderer/control/index.html
+++ b/src/renderer/control/index.html
@@ -108,6 +108,11 @@
                 <input type="checkbox" id="randomize-all-check" />
                 <span>Randomize all</span>
               </label>
+              <div class="button-row" style="margin-top: 10px">
+                <button id="reset-rotation-pool-btn" class="btn btn-secondary">
+                  Reset random pool
+                </button>
+              </div>
             </div>
           </section>
 
