--- a/src/renderer/control/index.html
+++ b/src/renderer/control/index.html
@@ -134,7 +134,7 @@
                 <input
                   v-model="rotationForm.enabled"
                   type="checkbox"
-                  @change="onRotationEnabledChange"
+                  @change="applyRotation"
                 />
                 <span>Auto-rotate</span>
               </label>
@@ -147,7 +147,7 @@
                 class="slider"
                 min="5"
                 max="120"
-                @input="onRotationIntervalInput"
+                @input="applyRotation"
               />
               <div class="radio-group">
                 <label class="radio-label">
@@ -156,7 +156,7 @@
                     type="radio"
                     name="rotation-order"
                     value="sequential"
-                    @change="onRotationOrderChange"
+                    @change="applyRotation"
                   />
                   <span>Sequential</span>
                 </label>
@@ -166,7 +166,7 @@
                     type="radio"
                     name="rotation-order"
                     value="random"
-                    @change="onRotationOrderChange"
+                    @change="applyRotation"
                   />
                   <span>Random</span>
                 </label>
@@ -175,7 +175,7 @@
                 <input
                   v-model="rotationForm.randomizeColors"
                   type="checkbox"
-                  @change="onRotationRandomizeColorsChange"
+                  @change="applyRotation"
                 />
                 <span>Randomize colors</span>
               </label>
@@ -210,7 +210,7 @@
                 min="0.1"
                 max="2"
                 step="0.1"
-                @input="onSensitivityInput"
+                @input="applyAudioConfig"
               />
             </div>
             <div class="control-group">
@@ -222,7 +222,7 @@
                 min="0"
                 max="0.99"
                 step="0.01"
-                @input="onSmoothingInput"
+                @input="applyAudioConfig"
               />
             </div>
           </section>
